--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -111,7 +111,8 @@ footer {
   text-align: center;
   font-size: 1rem;
   border-radius: 8px;
-  margin-bottom: 30px;
+  margin-top: 30px;
+  align-items: bottom;
 }
 
 /* Media Queries for responsiveness */
