--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -233,6 +233,7 @@ footer {
   left: 0;
   width: 100%;
   margin-top: auto; /* Ensures footer is pushed to the bottom */
+  margin-bottom: auto;
   padding-bottom: 30px;
 }
 
