--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -55,7 +55,9 @@ nav {
   align-items: center;
   background-color: #fff;
   border: 1px solid #ccc;
-  padding: 20px 20px 10px 10px;
+  padding: 20px 20px;
+  margin-left: 20px;
+  margin-right: 20px;
   margin-bottom: 20px;
   border-radius: 8px;
 }
