--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -55,10 +55,7 @@ nav {
   align-items: center;
   background-color: #fff;
   border: 1px solid #ccc;
-  padding: 20px 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  padding: 20px 20px 20px;
   border-radius: 8px;
 }
 
