--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -37,7 +37,7 @@ body {
 header {
   background-color: #2d3a7f;
   color: #fff;
-  padding: 20px 0;
+  padding: 20px;
   text-align: center;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -55,7 +55,7 @@ nav {
   align-items: center;
   background-color: #fff;
   border: 1px solid #ccc;
-  padding: 20px 20px 20px;
+  padding: 20px 40px 20px;
   border-radius: 8px;
 }
 
