--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -55,7 +55,7 @@ nav {
   align-items: center;
   background-color: #fff;
   border: 1px solid #ccc;
-  padding: 20px 40px 20px;
+  padding: 40px;
   border-radius: 8px;
 }
 
