--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -55,7 +55,7 @@ nav {
   align-items: center;
   background-color: #fff;
   border: 1px solid #ccc;
-  padding: 30px;
+  padding: 20px;
   border-radius: 8px;
 }
 
@@ -130,12 +130,11 @@ nav a:hover {
   align-items: center;
   font-size: 1.5rem;
   margin-bottom: 20px;
-  color: black;
 }
 
 .calendar-header button {
   background-color: #2d3a7f;
-  color: black;
+  color: #000;
   padding: 8px 16px;
   border-radius: 50%;
   font-size: 1.2rem;
@@ -156,7 +155,7 @@ nav a:hover {
 .calendar-header span {
   font-weight: bold;
   font-size: 1.5rem;
-  color: #333; /* Ensures the month and year text is always visible */
+  color: #000; /* Ensures the month and year text is always visible */
 }
 
 /* Calendar Grid */
@@ -173,7 +172,7 @@ nav a:hover {
   padding: 10px;
   background-color: #f4f7fc;
   border-radius: 8px;
-  color: black; /* Ensure the day names are visible */
+  color: #000; /* Ensure the day names are visible */
 }
 
 .calendar-grid .date {
@@ -181,8 +180,8 @@ nav a:hover {
   cursor: pointer;
   border-radius: 8px;
   transition: background-color 0.2s ease;
-  color: #333; /* Ensure all dates have visible text */
-  background-color: #fff; /* Default background color for all dates */
+  color: #000; /* Ensure all dates have visible text */
+  background-color: #000; /* Default background color for all dates */
 }
 
 /* Styling for active dates (current month) */
